# basic-rag-pipeline

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
evaluate/: evaluate_quickstart.py  samples.json
query/: query_live.py
src/rag_pipeline/: __init__.py  models.py
src/rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_pipeline/datastore/: __init__.py  base.py  chroma.py
src/rag_pipeline/evaluator/: __init__.py  base.py  llm_judge.py
src/rag_pipeline/generator/: __init__.py  base.py  grounded.py
src/rag_pipeline/indexer/: __init__.py  base.py  fixed_size.py
src/rag_pipeline/llm/: __init__.py  base.py  lmstudio.py
src/rag_pipeline/loader/: __init__.py  audio.py  base.py  discovery.py  docling.py
src/rag_pipeline/retriever/: __init__.py  base.py  datastore.py
tests/: test_audio_loader.py  test_chroma_store.py  test_datastore_retriever.py  test_docling_loader.py  test_fixed_size_indexer.py  test_grounded_generator.py  test_interfaces.py  test_llm_judge_evaluator.py  test_lmstudio_client.py
