[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "An educational RAG pipeline, built piece by piece."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = ["docling>=2.0"]
chroma = ["chromadb>=0.5"]
audio = ["faster-whisper>=1.0"]
lmstudio = ["openai>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
